ci(gh-workflow): attempt to reuse previous builds for electron builds

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,7 +61,8 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: scoreman-build
-          path: packages/
+          path: ${{ github.workspace }} |
+            !node_modules
 
   release:
     strategy:
@@ -79,6 +80,19 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: scoreman-build
+
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - name: Cache yarn modules
+        uses: actions/cache@v1
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
       - name: Display structure of downloaded files
         run: ls -R
