--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,7 +61,8 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: scoreman-build
-          path: ${{ github.workspace }} |
+          path: |
+            ${{ github.workspace }}
             !node_modules
 
   release:
