ci(gh-workflow): set electron-builder args to -p always

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -104,5 +104,6 @@ jobs:
           skip_build: true
           package_root: ./packages/standalone
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          args: -p always
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
