--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,12 +98,10 @@ jobs:
       - name: Display structure of downloaded files
         run: ls -R
 
-      - name: Build and release AppImage
-        uses: samuelmeuli/action-electron-builder@master
-        with:
-          skip_build: true
-          package_root: ./packages/standalone
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          args: -p always
+      - name: Build and release Electron binary
+        run: |
+          yarn install
+          npx electron-builder build --publish always
+        working-directory: ./packages/standalone
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
