--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,6 +24,7 @@
     "@scoreman/client": "^0.2.2",
     "axios": "^0.21.1",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.3",
     "express-jsonschema": "^1.1.6",
     "lodash": "^4.17.20",
