--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js"
   },
   "bin": {
-    "scoreman": "index.js"
+    "scoreman-server": "index.js"
   },
   "repository": {
     "type": "git",
