feat(server): :sparkles: add basic auth for posting scores
Very, VERY early auth way to post score. To set usernames check ./packages/server/data/users.json.sample.

Closes #37

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ typings/
 packages/*-old
 packages/server/scoreboard-data.json
 packages/standalone/scoreboard-data.json
+packages/server/data/users.json
