--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,9 @@
 name: Release lifecycle
 
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   build:
@@ -13,6 +16,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          # pulls all commits (needed for lerna / semantic release to correctly version)
+          fetch-depth: "0"
+
+        # pulls all tags (needed for lerna / semantic release to correctly version)
+      - name: Fetch all tags, so lerna is happy
+        run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
 
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
@@ -91,9 +101,6 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-
-      - name: Display structure of downloaded files
-        run: ls -R
 
       - name: Build and release Electron binary
         run: |
