--- a/packages/standalone/package.json
+++ b/packages/standalone/package.json
@@ -11,14 +11,14 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/N0NamedGuy/scoreman.git"
+        "url": "git+https://github.com/ScoremanOrg/scoreman.git"
     },
     "author": "David Serrano <david.ma.serrano@gmail.com>",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/N0NamedGuy/scoreman/issues"
+        "url": "https://github.com/ScoremanOrg/scoreman/issues"
     },
-    "homepage": "https://github.com/N0NamedGuy/scoreman#readme",
+    "homepage": "https://github.com/ScoremanOrg/scoreman#readme",
     "build": {
         "appId": "org.duckdns.dserrano.scoreman",
         "productName": "Scoreman",
@@ -33,12 +33,14 @@
         }
     },
     "devDependencies": {
-        "electron": "8.5.2",
-        "electron-builder": "^22.6.0"
+        "electron": "9.4.0",
+        "electron-builder": "^22.9.1"
     },
     "dependencies": {
         "@scoreman/client": "^0.5.3",
         "@scoreman/overlays": "^0.0.13",
-        "@scoreman/server": "^0.5.3"
+        "@scoreman/server": "^0.5.3",
+        "electron-log": "^4.3.1",
+        "electron-updater": "^4.3.5"
     }
 }
