chore: :arrow_up: upgrade lernaand vue cli
Also, updated the eslintrc to avoid screaming at using old style stuff.
That will need addressing eventually.
Hopefully this does not break CI :)

Maybe breaks CI?

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,42 +1,43 @@
 {
-    "name": "@scoreman/client",
-    "version": "0.6.2",
-    "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
-    },
-    "main": "dist/index.html",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/N0NamedGuy/scoreman.git"
-    },
-    "author": "David Serrano <david.ma.serrano@gmail.com>",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/N0NamedGuy/scoreman/issues"
-    },
-    "homepage": "https://github.com/N0NamedGuy/scoreman#readme",
-    "dependencies": {
-        "core-js": "^3.6.4",
-        "vue": "^2.6.11"
-    },
-    "devDependencies": {
-        "@vue/cli-plugin-babel": "~4.3.0",
-        "@vue/cli-plugin-eslint": "~4.3.0",
-        "@vue/cli-service": "~4.3.0",
-        "axios": "^0.21.1",
-        "babel-eslint": "^10.1.0",
-        "bootstrap": "^4.5.0",
-        "eslint": "^6.7.2",
-        "eslint-plugin-vue": "^6.2.2",
-        "flag-icon-css": "^3.4.6",
-        "fontawesome": "^5.6.3",
-        "jquery": "^3.5.1",
-        "lodash": "^4.17.21",
-        "popper.js": "^1.16.1",
-        "sass": "^1.26.3",
-        "sass-loader": "^8.0.2",
-        "vue-template-compiler": "^2.6.11"
-    }
+  "name": "@scoreman/client",
+  "version": "0.6.2",
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "main": "dist/index.html",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/N0NamedGuy/scoreman.git"
+  },
+  "author": "David Serrano <david.ma.serrano@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/N0NamedGuy/scoreman/issues"
+  },
+  "homepage": "https://github.com/N0NamedGuy/scoreman#readme",
+  "dependencies": {
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "core-js": "^3.26.1",
+    "vue": "^2.6.11"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.5.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "flag-icon-css": "^3.4.6",
+    "fontawesome": "^5.6.3",
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.21",
+    "popper.js": "^1.16.1",
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.11"
+  }
 }
