--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -32,7 +32,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "flag-icon-css": "^3.4.6",
-    "fontawesome": "^5.6.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "lodash": "^4.17.21",
     "popper.js": "^1.16.1",
