--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ packages/*-old
 packages/server/scoreboard-data.json
 packages/standalone/scoreboard-data.json
 packages/server/data/users.json
+/.gtm/
