perf: :fire: remove unnecessary stage

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,10 +12,7 @@ COPY yarn.lock ./
 RUN yarn install --frozen-lockfile
 RUN yarn workspace @scoreman/client build
 
-FROM node:19.3.0 as server-run
-
-WORKDIR /app
-COPY --from=frontend-build /app ./
 EXPOSE 3000
-CMD yarn workspace @scoreman/server run start
+
+CMD yarn workspace @scoreman/server run start --baseUrl=/scoreman --useCors=true
 
