--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,8 +42,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - name: Lerna bootstrap
-        run: npx lerna bootstrap
+      - name: Yarn install
+        run: yarn install
 
       - name: Build admin UI
         run: yarn workspace @scoreman/client build
@@ -104,7 +104,6 @@ jobs:
 
       - name: Build and release Electron binary
         run: |
-          yarn install
           npx electron-builder build --publish always
         working-directory: ./packages/standalone
         env:
